# felimination

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: publish-doc.yml  publish.yml  tests.yml
docs/: index.md
docs/reference/: RFE.md  callbacks.md  genetic_algorithms.md
docs/reference/selectors/: MRMR.md  RFE.md  drift.md  forward_selection.md
docs/reference/utils/: best_iteration_selection.md  importance.md
docs/tutorials/: forward_feature_selection_with_mrmr.ipynb  genetic_algorithms_x_feature_selection.ipynb  genetic_algorithms_x_mrmr_mutation.ipynb  recursive_feature_elimination.ipynb
felimination/: best_iteration_selection.py  callbacks.py  drift.py  forward.py  ga.py  importance.py  mrmr.py  rfe.py
felimination/utils/: parallel.py
reference/RFE/: index.html
reference/callbacks/: index.html
reference/drift/: index.html
reference/genetic_algorithms/: index.html
reference/importance/: index.html
reference/selectors/MRMR/: index.html
reference/selectors/RFE/: index.html
reference/selectors/drift/: index.html
reference/selectors/forward_selection/: index.html
reference/selectors/genetic_algorithms/: index.html
reference/utils/best_iteration_selection/: index.html
reference/utils/callbacks/: index.html
reference/utils/importance/: index.html
search/: search_index.json
tests/: conftest.py  test_drift.py  test_ga.py  test_mrmr_forward.py  test_rfe.py
tests/importance/: test_rfe.py
tests/rfe/: test_rfe.py
tutorials/forward_feature_selection_with_mrmr/: index.html
tutorials/genetic_algorithms_x_feature_selection/: index.html
tutorials/genetic_algorithms_x_mrmr_mutation/: index.html
tutorials/recursive_feature_elimination/: index.html
