[project]
name = "felimination"
description = ""
version = "0.1.0"
authors = [
    { name = "Claudio Salvatore Arcidiacono", email = "author@email.com" }
]

dependencies = [
    "scikit-learn>=1.0.1,<2.0.0",
    "pandas>=1.1.1,<3.0.0",
    "seaborn>=0.11.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8-pyproject",
    "flake8",
    "pre-commit",
    "pytest",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
