[project]
name = "felimination"
description = "This library contains some useful scikit-learn compatible classes for feature selection."
version = "0.2.2"
keywords = ["feature selection", "scikit-learn", "machine learning"]
authors = [
    { name = "Claudio Salvatore Arcidiacono", email = "author@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "scikit-learn>=1.0.1,<2.0.0",
    "pandas>=1.1.1,<3.0.0",
    "seaborn>=0.11.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8-pyproject",
    "flake8",
    "pre-commit",
    "pytest",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
build = [
    "build",
    "twine"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project.urls]
"Homepage" = "https://github.com/ClaudioSalvatoreArcidiacono/felimination"
"Documentation" = "https://claudiosalvatorearcidiacono.github.io/felimination/"
"Bug Tracker" = "https://github.com/ClaudioSalvatoreArcidiacono/felimination/issues"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
